# scribblehub-to-epub

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
scribble_to_epub/: __about__.py  __init__.py  __main__.py  connection.py  scribblehub.py
scribble_to_epub/assets/: scribblehub.css
