[project]
name = "scribble_to_epub"
dependencies = []
dynamic = ["version"]
authors = []
description = "This scrapes books from https://www.scribblehub.com/ and  creates epub from them"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
scribble-to-epub = "scribble_to_epub.__main__:cli"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build]
directory = "dist"

[tool.hatch.build.targets.sdist]
include = ["scribble_to_epub/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["scribble_to_epub"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "scribble_to_epub/__about__.py"
